Fix sidebar styles on mobile

--- a/asset/style/core/layout.scss
+++ b/asset/style/core/layout.scss
@@ -17,6 +17,10 @@ body {
 
 .sidebar {
     max-width: 360px;
+
+    @media all and (max-width: $frag-break-mobile) {
+        max-width: none;
+    }
 }
 .main, .footer {
     max-width: 760px;
